[tool.poetry]
name = "pyquatlib"
version = "0.2.0"
description = "Just another library for quaternions. With focus on usability."
authors = ["Marco Bosatta <marco.bosatta@xp-obj.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.9"
pandas = "^2.2.2"
numpy = "^1.26.4"
scipy = "^1.13.0"
numba = "^0.59.1"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.2.1.240316"
pytest = "^8.2.0"
pytest-runner = "^6.0.1"
mypy = "^1.10.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
black = "^24.4.2"
jupyter = "^1.0.0"
Sphinx = "^7.3.7"
sphinx-autodoc-typehints = "^2.1.0"
sphinxcontrib-katex = "^0.9.9"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-napoleon-typehints = "^2.1.6"
recommonmark = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
